--- a/templates/disciplines_form.html
+++ b/templates/disciplines_form.html
@@ -1,15 +1,24 @@
 {% extends 'base.html' %}
+{% load widget_tweaks %}
 {% block title %}Добавление предмета{% endblock %}
 {% block content %}
-    <h1>Добавление предмета </h1>
-    <form action="{% url 'disciplines:disciplines_add' %}" method="post">
-        {% csrf_token %}
-        <table>
-            {{ form.as_table }}
-        </table>
-        <p></p>
-        <button type="submit" class="btn btn-success">Сохранить</button>
-        <a href= "{% url 'disciplines:disciplines_list' %}" class="btn btn-primary">Отмена</a>
-    </form>
+    <div class="container">
+        <form action="{% url 'disciplines:disciplines_add' %}" method="post">
+            {% csrf_token %}
+            <div class="row">
+                <div class="col-md-6 offset-md-3">
+                    <h1>Добавление предмета </h1>
+                    {% for field in form.visible_fields %}
+                        <div class="form-group">
+                            {{ field.label_tag }}
+                            {% render_field field class="form-control" %}
+                        </div>
+                    {% endfor %}
+                    <center><p><button type="submit" class="btn btn-success">Сохранить</button>
+                    <a href= "{% url 'disciplines:disciplines_list' %}" class="btn btn-primary">Отмена</a></p></center>
+                </div>
+            </div>
+        </form>
+    </div>
 {% endblock %}
 
