--- a/templates/teachers_list.html
+++ b/templates/teachers_list.html
@@ -27,11 +27,30 @@
                 <td></td>
 
                 <td>
-                    <form action = '/teacher/delete_teacher/' method="post">
-                        {% csrf_token %}
-                         <input type="hidden" name="teacher" value="{{ teacher.id }}" />
-                         <input type="submit" value="удалить">
-                    </form>
+                     <div class="modal" id="myModal" tabindex="-1" role="dialog">
+                      <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                          <div class="modal-header">
+                            <h5 class="modal-title">Подтверждение удаления</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                              <span aria-hidden="true">&times;</span>
+                            </button>
+                          </div>
+                          <div class="modal-body">
+                            <p>Вы уверены, что хотите удалить?</p>
+                          </div>
+                          <div class="modal-footer">
+                              <form action = "{% url 'teachers:delete_teacher' %}" method="post">
+                                {% csrf_token %}
+                                <input type="hidden" name="teacher" value="{{ teacher.id }}" />
+                                <input type="submit" value="Удалить" class="btn btn-danger">
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Отмена</button>
+                              </form>
+                           </div>
+                        </div>
+                      </div>
+                    </div>
+                    <button type="button" data-toggle="modal" data-target="#myModal" class="btn btn-danger">Удалить</button>
                 </td>
             </tr>
         {% endfor %}
