вывод .xls таблицы экран успеваемости c помощью openpyxl (сделайте в cmd 'pip install openpyxl')

--- a/templates/disciplines.html
+++ b/templates/disciplines.html
@@ -57,4 +57,5 @@
 
     <a href="{% url 'disciplines:disciplines_add' %}" class="btn btn-success">Добавить новый предмет</a>
     <a href="{% url 'disciplines:details_add' %}" class="btn btn-primary">Добавить детали предмета</a>
+    <a href="{% url 'disciplines:export' %}" class="btn btn-primary">Экран успеваемости</a>
 {% endblock %}
