--- a/templates/base.html
+++ b/templates/base.html
@@ -26,6 +26,9 @@
                     <li class="nav-item active">
                         <a class="nav-link" href="{% url 'disciplines:disciplines_list' %}">Список предметов</a>
                     </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="{% url 'nomenclatures:rup_list' %}">Рабочий учебный план</a>
+                    </li>
                 </ul>
                 <ul class="navbar-nav navbar-right">
                     <li class="nav-item active">
