--- a/templates/base.html
+++ b/templates/base.html
@@ -27,6 +27,9 @@
                         <a class="nav-link" href="{% url 'disciplines:disciplines_list' %}">Список предметов</a>
                     </li>
                     <li class="nav-item active">
+                        <a class="nav-link" href="{% url 'disciplines:excel' %}">Экран успеваемости</a>
+                    </li>
+                    <li class="nav-item active">
                         <a class="nav-link" href="{% url 'nomenclatures:rup_list' %}">Рабочий учебный план</a>
                     </li>
                 </ul>
