Добавил кол-во часов в экране успеваемости + редактирование деталей предмета

--- a/templates/details_form.html
+++ b/templates/details_form.html
@@ -15,7 +15,7 @@
                         </div>
                     {% endfor %}
                     <center><p><button type="submit" class="btn btn-success">Сохранить</button>
-                    <a href= "{% url 'disciplines:disciplines_list' %}" class="btn btn-primary">Отмена</a></p></center>
+                    <a href= "{% url 'disciplines:details_list' %}" class="btn btn-primary">Отмена</a></p></center>
                 </div>
             </div>
         </form>
