--- a/templates/base.html
+++ b/templates/base.html
@@ -73,6 +73,15 @@
     </script>
     <script>
         $(document).ready( function () {
+        $('#disc_details_table').DataTable( {
+        "language": {
+                "url": "//cdn.datatables.net/plug-ins/1.10.16/i18n/Russian.json"
+                }
+            } );
+        } );
+    </script>
+    <script>
+        $(document).ready( function () {
         $('#students_table').DataTable( {
         "language": {
                 "url": "//cdn.datatables.net/plug-ins/1.10.16/i18n/Russian.json"
