--- a/templates/base.html
+++ b/templates/base.html
@@ -29,6 +29,9 @@
                     <li class="nav-item active">
                         <a class="nav-link" href="{% url 'disciplines:excel' %}">Экран успеваемости</a>
                     </li>
+                     <li class="nav-item active">
+                        <a class="nav-link" href="{% url 'disciplines:vedomost_list' %}">Ведомость</a>
+                    </li>
                     <li class="nav-item active">
                         <a class="nav-link" href="{% url 'nomenclatures:rup_list' %}">Рабочий учебный план</a>
                     </li>
