--- a/templates/export_to_excel.html
+++ b/templates/export_to_excel.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% block title %}Экран успеваемости{% endblock %}
 {% block content %}
+<form action="{% url 'disciplines:export' %}" method="get">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 col-lg-offset-12">
@@ -9,9 +10,9 @@
                     <p></p>
                     <div class="col-lg-3 col-lg-offset-12">
                         <label>Группа:</label>
-                    <select name="dropdown1 " class="form-control">
+                    <select name="dropdown1" class="form-control">
                         {% for groupname in groupname %}
-                            <option value="{{ groupname.Name }}">{{ groupname.Name}}</option>
+                            <option value="{{ groupname.id }}">{{ groupname.Name}}</option>
                         {% endfor %}
                     </select>
                         <p></p>
@@ -23,11 +24,10 @@
                     </select>
                     </div>
                     <p></p>
-                    <p><button type="submit" class="btn btn-success">Вывести</button>
-                    <p></p>
-                    <p><a href="{% url 'disciplines:export' %}" class="btn btn-success">Вывод</a></p>
+                    <p><button type="submit" class="btn btn-success">Вывод</button>
                 </center>
             </div>
         </div>
     </div>
+</form>
 {% endblock %}
