--- a/templates/disciplines.html
+++ b/templates/disciplines.html
@@ -12,6 +12,7 @@
         <th>Тип</th>
         <th></th>
         <th></th>
+        <th></th>
         </tr>
         </thead>
         <tbody>
@@ -50,6 +51,8 @@
                     </div>
                     <button type="button" data-toggle="modal" data-target="#myModal" class="btn btn-danger">Удалить</button>
                 </td>
+                <td> <a href="{% url 'brs_studentlist' discipline.id %}"><input type="submit" value="Успеваемость"
+                                                                                   class="btn btn-secondary"></a></td>
             </tr>
             {% endfor %}
         </tbody>
