чтение РУП не докончила

--- a/templates/rup_upload.html
+++ b/templates/rup_upload.html
@@ -8,6 +8,7 @@
             {{ form.as_table }}
         </table>
         <button type="submit" class="btn btn-success">Загрузить</button>
+        <a href= "{% url 'nomenclatures:rup_list' %}" class="btn btn-primary">Отмена</a>
 
     </form>
 {% endblock %}
