--- a/templates/brs_students.html
+++ b/templates/brs_students.html
@@ -7,7 +7,7 @@
     <h1>Контрольный лист | {{ discipline.Name }}</h1>
     <form method="post">
     {% csrf_token %}
-        <table id="students_table" class="table table-bordered">
+        <table id="my_table" class="table table-bordered">
             <thead>
                 <tr>
                     <th scope="col">№</th>
