--- a/templates/details_form.html
+++ b/templates/details_form.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load widget_tweaks %}
-{% block title %}Добавление деталей предмета{% endblock %}
+{% block title %}Добавление деталей дисциплины{% endblock %}
 {% block content %}
     <div class="container">
         <form action="{% url 'disciplines:details_add' %}" method="post">
