--- a/templates/disciplines_detail.html
+++ b/templates/disciplines_detail.html
@@ -1,16 +1,16 @@
 {% extends 'base.html' %}
-{% block title %}Детали предмета{% endblock %}
+{% block title %}Детали дисциплины{% endblock %}
 {% block content %}
 <div class="container">
     <div class="row">
         <div class="col-md-12">
             <div class="panel panel-default">
                 <div class="panel-body">
-                    <h1>Детали предмета</h1>
+                    <h1>Детали дисциплины</h1>
                     <table class="table table-bordered">
                         <thead>
                         <tr>
-                        <th scope="col">Предмет</th>
+                        <th scope="col">Дисциплина</th>
                         <th scope="col">ЗЕТ</th>
                         <th scope="col">Кол-во лекций</th>
                         <th scope="col">Кол-во практики</th>
