--- a/templates/disciplines_form.html
+++ b/templates/disciplines_form.html
@@ -1,13 +1,13 @@
 {% extends 'base.html' %}
 {% load widget_tweaks %}
-{% block title %}Добавление предмета{% endblock %}
+{% block title %}Добавление дисциплины{% endblock %}
 {% block content %}
     <div class="container">
         <form action="{% url 'disciplines:disciplines_add' %}" method="post">
             {% csrf_token %}
             <div class="row">
                 <div class="col-md-6 offset-md-3">
-                    <h1>Добавление предмета </h1>
+                    <h1>Добавление дисциплины </h1>
                     {% for field in form.visible_fields %}
                         <div class="form-group">
                             {{ field.label_tag }}
@@ -15,7 +15,7 @@
                         </div>
                     {% endfor %}
                     <center><p><button type="submit" class="btn btn-success">Сохранить</button>
-                    <a href= "{% url 'disciplines:disciplines_list' %}" class="btn btn-primary">Отмена</a></p></center>
+                    <input type="button" class="btn btn-primary" onclick="history.back();" value="Назад"/></p></center>
                 </div>
             </div>
         </form>
