--- a/templates/students_list.html
+++ b/templates/students_list.html
@@ -2,7 +2,7 @@
 {% block title %}Список студентов{% endblock %}
 {% block content %}
     <h1>Список студентов</h1>
-    <table id="students_table" class="table table-bordered">
+    <table id="my_table" class="table table-bordered">
         <thead>
         <tr>
         <th scope="col">Номер зачетной книжки</th>
