--- a/templates/teachers_list.html
+++ b/templates/teachers_list.html
@@ -2,7 +2,7 @@
 {% block title %}Список преподавателей{% endblock %}
 {% block content %}
     <h1>Список преподавателей</h1>
-    <table id="teachers_list" class="table table-bordered">
+    <table id="my_table" class="table table-bordered">
         <thead>
         <tr>
         <th scope="col">ФИО</th>
