--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,7 @@
         {% load staticfiles %}
         <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" type="text/css">
         <link rel="stylesheet" href="{% static 'css/dataTables.bootstrap4.min.css' %}" type="text/css">
+        <link rel="stylesheet" href="{% static 'my.css' %}" type="text/css">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -16,25 +17,33 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarText">
                 {% if user.is_authenticated %}
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="{% url 'teachers:list_teachers' %}">Список преподавателей</a>
+                <ul class="navbar-nav text-uppercase g-font-weight-600 u-main-nav-v8 u-sub-menu-v3 mx-auto">
+                    <li class="nav-item dropdown active">
+                        <a class="nav-link dropdown-toggle" href="#" id="teacher" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                          Преподавателю
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="teacher">
+                          <a class="dropdown-item" href="{% url 'disciplines:teacher' %}">Список дисциплин</a>
+                          <div class="dropdown-divider"></div>
+                          <a class="dropdown-item" href="{% url 'disciplines:vedomost_list' %}">Ведомость</a>
+                        </div>
+                    </li>
+                    <li class="nav-item dropdown active">
+                        <a class="nav-link dropdown-toggle" href="#" id="admin" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                          Администратору
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="admin">
+                          <a class="dropdown-item" href="{% url 'teachers:list_teachers' %}">Список преподавателей</a>
+                          <a class="dropdown-item" href="{% url 'student_changelist' %}">Список студентов</a>
+                          <a class="dropdown-item" href="{% url 'disciplines:disciplines_list' %}">Список всех дисциплин</a>
+                          <a class="dropdown-item" href="{% url 'disciplines:excel' %}">Экран успеваемости</a>
+                          <div class="dropdown-divider"></div>
+                          <a class="dropdown-item" href="{% url 'nomenclatures:rup_list' %}">Рабочий учебный план</a>
+                        </div>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="{% url 'student_changelist' %}">Список студентов</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="{% url 'disciplines:teacher' %}">Список дисциплин</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="{% url 'disciplines:excel' %}">Экран успеваемости</a>
-                    </li>
-                     <li class="nav-item active">
-                        <a class="nav-link" href="{% url 'disciplines:vedomost_list' %}">Ведомость</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="{% url 'nomenclatures:rup_list' %}">Рабочий учебный план</a>
-                    </li>
+        <a class="nav-link" href="{% url 'disciplines:excel' %}">Экран успеваемости</a>
+      </li>
                 </ul>
                 <ul class="navbar-nav navbar-right">
                     <li class="nav-item active">
