--- a/templates/disciplines_detail.html
+++ b/templates/disciplines_detail.html
@@ -35,7 +35,7 @@
                             </tr>
                         </tbody>
                     </table>
-                    <a href="{% url 'disciplines:disciplines_list' %}" class="btn btn-success">Вернуться</a>
+                    <input type="button" class="btn btn-primary" onclick="history.back();" value="Назад"/>
                     <a href="{% url 'disciplines:details_list' %}" class="btn btn-primary">Изменить</a>
                 </div>
             </div>
