--- a/templates/export_to_excel.html
+++ b/templates/export_to_excel.html
@@ -24,7 +24,7 @@
                     </select>
                     </div>
                     <p></p>
-                    <p><button type="submit" class="btn btn-success">Вывод</button>
+                    <p><button type="submit" class="btn btn-success">Скачать</button>
                 </center>
             </div>
         </div>
