--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,6 @@
         {% load staticfiles %}
         <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" type="text/css">
         <link rel="stylesheet" href="{% static 'css/dataTables.bootstrap4.min.css' %}" type="text/css">
-        <link rel="stylesheet" href="{% static 'my.css' %}" type="text/css">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -11,6 +10,7 @@
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container">
             <span class="navbar-brand mb-0 h1">Меню</span>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -24,26 +24,21 @@
                         </a>
                         <div class="dropdown-menu" aria-labelledby="teacher">
                           <a class="dropdown-item" href="{% url 'disciplines:teacher' %}">Список дисциплин</a>
-                          <div class="dropdown-divider"></div>
-                          <a class="dropdown-item" href="{% url 'disciplines:vedomost_list' %}">Ведомость</a>
                         </div>
                     </li>
                     <li class="nav-item dropdown active">
                         <a class="nav-link dropdown-toggle" href="#" id="admin" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                          Администратору
+                          Начальнику учебно-методического отдела
                         </a>
                         <div class="dropdown-menu" aria-labelledby="admin">
                           <a class="dropdown-item" href="{% url 'teachers:list_teachers' %}">Список преподавателей</a>
                           <a class="dropdown-item" href="{% url 'student_changelist' %}">Список студентов</a>
-                          <a class="dropdown-item" href="{% url 'disciplines:disciplines_list' %}">Список всех дисциплин</a>
-                          <a class="dropdown-item" href="{% url 'disciplines:excel' %}">Экран успеваемости</a>
+                          <a class="dropdown-item" href="{% url 'disciplines:disciplines_list' %}">Список дисциплин</a>
                           <div class="dropdown-divider"></div>
+                          <a class="dropdown-item" href="{% url 'disciplines:excel' %}">Экран успеваемости</a>
                           <a class="dropdown-item" href="{% url 'nomenclatures:rup_list' %}">Рабочий учебный план</a>
                         </div>
                     </li>
-                    <li class="nav-item active">
-        <a class="nav-link" href="{% url 'disciplines:excel' %}">Экран успеваемости</a>
-      </li>
                 </ul>
                 <ul class="navbar-nav navbar-right">
                     <li class="nav-item active">
@@ -63,6 +58,7 @@
                 </ul>
                 {% endif %}
             </div>
+                </div>
         </nav>
         <div class="container">
             <br>
