--- a/templates/student_form.html
+++ b/templates/student_form.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
-{% block title %}Добавление студента{% endblock %}
+{% block title %}{{ title }}{% endblock %}
 {% block content %}
-    <h1>Добавление студента</h1>
+    <h1>{{ title }}</h1>
     <form method="post">
         {% csrf_token %}
         <table>
