фильтрация успеваемости, подправлены оценки для ведомости, изменены названия в шаблоне

--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,7 @@
                     </li>
                     <li class="nav-item dropdown active">
                         <a class="nav-link dropdown-toggle" href="#" id="admin" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                          Начальнику учебно-методического отдела
+                          Начальнику УМО
                         </a>
                         <div class="dropdown-menu" aria-labelledby="admin">
                           <a class="dropdown-item" href="{% url 'teachers:list_teachers' %}">Список преподавателей</a>
