--- a/templates/brs_students.html
+++ b/templates/brs_students.html
@@ -13,13 +13,13 @@
                 <tr>
                     <th scope="col">№</th>
                     <th scope="col">Группа</th>
-                    <th scope="col">Фамилия и инициалы</th>
-                    <th scope="col">№ Зачетной книжки</th>
+                    <th scope="col">ФИО</th>
+                    <th scope="col">№ зачетной книжки</th>
                     <th scope="col">1 контр. срез</th>
                     <th scope="col">2 контр. срез</th>
                     <th scope="col">Рубежный срез до начала экз. сессии</th>
                     <th scope="col">Рубежный срез с учетом премиальных баллов и отработок</th>
-                    <th scope="col">{{ discipline.control.controltype }}</th>
+                    <th scope="col">{{ control_type }}</th>
                     <th scope="col">Всего баллов</th>
                     <th scope="col">Оценка прописью</th>
                     <th scope="col">Буквенный эквивалент оценки</th>
