--- a/templates/ekran.html
+++ b/templates/ekran.html
@@ -4,11 +4,10 @@
     <style type="text/css">
         input[type=text] { width: 75%; }
     </style>
-    <h1>Контрольный лист | {{ discipline.Name }}</h1>
+    <h1>Экран успевамеости {{ group.Name }}</h1>
     <form method="post">
     {% csrf_token %}
-    <p align="right" id="brs_list_filter"><label><b>Группа:</b></label><br></p>
-        <table id="brs_list" class="table table-bordered">
+        <table id="ekran" class="table table-bordered">
             <thead class="thead-light">
                 <tr>
                     <th></th>
@@ -23,17 +22,19 @@
                     <td></td>
                     <td>Всего часов/ЗЕТ</td>
                     {% for item in totalhours %}
-                    <th>{{ item }}</th>
+                    <td>{{ item }}</td>
                     {% endfor %}
                 </tr>
                 {% for gl in students_list %}
                 <tr>
                     <td></td>
                     <td> {{ gl.student.FIO }} </td>
-                    {% for key1, value1 in dict.items %}
-                        {% if value1.key = gl.student.id %}
+                    {% for key1, value1 in exam_marks.items %}
+                        {% if value1.key == gl.student.id %}
                             {% for key2, value2 in value1.items %}
-                                <td> {{ value1.value2.mark.name }} </td>
+                                {% if value2.mark != None %}
+                                    <td> {{ value2.mark }} </td>
+                                {% endif %}
                             {% endfor %}
                         {% endif %}
                     {% endfor %}
