--- a/templates/disciplines_teacher.html
+++ b/templates/disciplines_teacher.html
@@ -2,28 +2,25 @@
 {% block title %}Выберите преподавателя{% endblock %}
 {% block content %}
 <form action="{% url 'disciplines:disciplines' %}" method="get">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12 col-lg-offset-12">
-                <center>
-                    <h1 class="title">Выберите преподавателя</h1>
-                    <p></p>
-                    <div class="col-lg-3 col-lg-offset-12">
-                    <select name="dropdown1" id="dropdown1" class="form-control">
-                        {% for kafedra_name in kafedra_name %}
-                            <option value="{{ kafedra_name.id }}">{{ kafedra_name.name}}</option>
-                        {% endfor %}
-                    </select>
-                    <select name="dropdown2" id="dropdown2" class="form-control">
-                        {% for teacher_name in teacher_name %}
-                            <option value="{{ teacher_name.id }}">{{ teacher_name.FIO}}</option>
-                        {% endfor %}
-                    </select>
-                    </div>
-                    <p></p>
-                    <p><button type="submit" class="btn btn-success">Показать дисциплины</button>
-                </center>
-            </div>
+    <center><h1 class="title">Выберите преподавателя</h1></center>
+    <div class="row justify-content-md-center">
+        <div class="col-md-4">
+            <p></p>
+                <label for="dropdown1" >Кафедра:</label>
+            <select name="dropdown1" id="dropdown1" class="form-control">
+                {% for kafedra_name in kafedra_name %}
+                    <option value="{{ kafedra_name.id }}">{{ kafedra_name.name}}</option>
+                {% endfor %}
+            </select>
+                <br>
+                <label for="dropdown2" >Преподаватель:</label>
+            <select name="dropdown2" id="dropdown2" class="form-control">
+                {% for teacher_name in teacher_name %}
+                    <option value="{{ teacher_name.id }}">{{ teacher_name.FIO}}</option>
+                {% endfor %}
+            </select>
+            <br>
+            <p><button type="submit" class="btn btn-success">Показать дисциплины</button></p>
         </div>
     </div>
 </form>
