--- a/templates/export_to_excel.html
+++ b/templates/export_to_excel.html
@@ -2,31 +2,25 @@
 {% block title %}Экран успеваемости{% endblock %}
 {% block content %}
 <form action="{% url 'disciplines:export' %}" method="get">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12 col-lg-offset-12">
-                <center>
-                    <h1 class="title">Экран успеваемости</h1>
-                    <p></p>
-                    <div class="col-lg-3 col-lg-offset-12">
-                        <label for="dropdown1" >Группа:</label>
-                    <select name="dropdown1" id="dropdown1" class="form-control">
-                        {% for groupname in groupname %}
-                            <option value="{{ groupname.id }}">{{ groupname.Name}}</option>
-                        {% endfor %}
-                    </select>
-                        <p></p>
-                        <label for="dropdown2">Семестр:</label>
-                    <select name="dropdown2" id="dropdown2" class="form-control">
-                        {% for semestrname in semestrname %}
-                            <option value="{{ semestrname.name }}">{{ semestrname.name}}</option>
-                        {% endfor %}
-                    </select>
-                    </div>
-                    <p></p>
-                    <p><button type="submit" class="btn btn-success">Скачать</button>
-                </center>
-            </div>
+    <center><h1 class="title">Экран успеваемости</h1></center>
+    <div class="row justify-content-md-center">
+        <div class="col-md-4">
+            <p></p>
+                <label for="dropdown1" >Группа:</label>
+            <select name="dropdown1" id="dropdown1" class="form-control">
+                {% for groupname in groupname %}
+                    <option value="{{ groupname.id }}">{{ groupname.Name}}</option>
+                {% endfor %}
+            </select>
+                <p></p>
+                <label for="dropdown2">Семестр:</label>
+            <select name="dropdown2" id="dropdown2" class="form-control">
+                {% for semestrname in semestrname %}
+                    <option value="{{ semestrname.name }}">{{ semestrname.name}}</option>
+                {% endfor %}
+            </select>
+            <br>
+            <p><button type="submit" class="btn btn-success">Скачать</button>
         </div>
     </div>
 </form>
